# cky-claw

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Jenkinsfile  README.md  backend-test-full.txt  backend-test-output.txt  coverage_output.txt  docker-compose.yml  e2e-results.json  vitest-fix.txt  vitest-frontend-output.txt  vitest-full.txt  vitest-out.txt  vitest-reg2.txt  vitest-reg3.txt  vitest-regression.txt  vitest-run-output.txt  vitest-saml3.txt
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_agent_configs.py  0002_create_sessions.py  0003_create_users.py  0004_create_token_usage_logs.py  0005_create_provider_configs.py  0006_create_traces_spans.py  0007_create_guardrail_rules.py  0008_create_approval_requests.py  0009_create_mcp_server_configs.py  0010_add_agent_tools.py  0011_create_tool_group_configs.py  0012_add_duration_ms_columns.py  0013_create_agent_config_versions.py  0014_add_agent_provider_name.py  0015_create_session_messages.py  0016_add_agent_output_type.py  0017_create_memory_entries.py  0018_create_skills.py  0019_create_agent_templates.py  0020_create_workflow_definitions.py  0021_create_team_configs.py  0022_create_audit_logs.py  0023_create_roles.py  0024_provider_models_and_cost.py  0025_im_channels.py  0026_evaluations_and_feedbacks.py  0027_multi_tenant_organizations.py  0028_conditional_enable.py  0029_scheduled_tasks.py  0030_soft_delete_unified.py  0031_scheduled_runs.py  0032_alert_rules_events.py  0033_config_change_logs.py  0034_config_change_logs_created_at_idx.py  0035_create_agent_locales.py  0036_oauth_connections.py  0037_evolution_proposals.py  0038_evolution_signals.py  0039_scheduled_task_add_task_type.py  0040_provider_add_model_tier_capabilities.py  (+22 more)
backend/app/: __init__.py  main.py
backend/app/api/: a2a.py  ab_test.py  agent_locales.py  agent_templates.py  agent_versions.py  agents.py  alerts.py  apm.py  approvals.py  audit_logs.py  auth.py  benchmark.py  checkpoints.py  compliance.py  config_reload.py  cost_router.py  debug.py  environments.py  evaluations.py  events.py  evolution.py  (+30 more)
backend/scripts/: check_db.py  cleanup_e2e_data.py  create_db.py  locustfile.py  promote_admin.py  reset_admin_pwd.py
backend/tests/: conftest.py  test_a2a.py  test_ab_test.py  test_agent_as_tool.py  test_agent_crud.py  test_agent_crud_edges.py  test_agent_export_import.py  test_agent_locales.py  test_agent_template.py  test_agent_version.py  test_alert.py  test_api_coverage.py  test_apm.py  test_approvals.py  test_audit_log.py  test_auth.py  test_auth_edge_cases.py  test_auto_evaluator.py  test_benchmark.py  test_channel_adapters.py  test_channel_adapters_e5.py  test_checkpoint.py  test_compliance.py  test_config_reload.py  test_cost_router.py  test_crypto_edge_cases.py  test_debug.py  test_e2e_backend.py  test_environments_api.py  test_event_journal.py  test_events_api.py  test_evolution.py  test_export.py  test_framework_boundary.py  test_guardrails.py  test_handoff_orchestration.py  test_health.py  test_hosted_tools.py  test_intent.py  test_knowledge_base.py  (+38 more)
ckyclaw-cli/: README.md  pyproject.toml
ckyclaw-cli/ckyclaw_cli/: __init__.py  agent_cmd.py  chat.py  client.py  login_cmd.py  main.py  provider_cmd.py  run_cmd.py
ckyclaw-cli/tests/: test_agent_cmd.py  test_cli.py  test_client.py  test_login_cmd.py  test_provider_cmd.py  test_run_cmd.py
ckyclaw-framework/: README.md  pyproject.toml
ckyclaw-framework/ckyclaw_framework/: __init__.py
ckyclaw-framework/examples/: 01_simple_agent.py  02_tool_agent.py  03_guardrails_handoff.py
ckyclaw-framework/tests/: test_a2a.py  test_agent_as_tool.py  test_agent_extended.py  test_agent_models.py  test_approval.py  test_approval_mode.py  test_artifacts.py  test_benchmark.py  test_builtin_guardrails.py  test_checkpoint.py  test_compat.py  test_conditional_enable.py  test_console_processor.py  test_context_engineering.py  test_converter_extended.py  test_cost_router.py  test_coverage_residual.py  test_debug_controller.py  test_dynamic_instructions.py  test_e2e_integration.py  test_e2e_phase69.py  test_engine_deep_paths.py  test_environment_aware.py  test_evaluator_extended.py  test_evaluator_validate.py  test_evolution_hooks.py  test_function_tool.py  test_function_tool_extended.py  test_graph_entity.py  test_graph_extractor.py  test_graph_store.py  test_handoff.py  test_history_trimmer_extended.py  test_hosted_tools.py  test_i18n.py  test_input_guardrail.py  test_integration.py  test_intent.py  test_lifecycle_hooks.py  test_llm_guardrail_extended.py  (+46 more)
kasaya/: README.md  pyproject.toml
kasaya-cli/: README.md  pyproject.toml
kasaya-cli/kasaya_cli/: __init__.py  agent_cmd.py  chat.py  client.py  login_cmd.py  main.py  provider_cmd.py  run_cmd.py
kasaya-cli/tests/: test_agent_cmd.py  test_cli.py  test_client.py  test_login_cmd.py  test_provider_cmd.py  test_run_cmd.py
kasaya/examples/: 01_simple_agent.py  02_tool_agent.py  03_guardrails_handoff.py
kasaya/kasaya/: __init__.py
kasaya/tests/: test_a2a.py  test_agent_as_tool.py  test_agent_extended.py  test_agent_models.py  test_approval.py  test_approval_mode.py  test_artifacts.py  test_benchmark.py  test_builtin_guardrails.py  test_checkpoint.py  test_compat.py  test_conditional_enable.py  test_console_processor.py  test_context_engineering.py  test_converter_extended.py  test_cost_router.py  test_coverage_residual.py  test_debug_controller.py  test_dynamic_instructions.py  test_e2e_integration.py  test_e2e_phase69.py  test_engine_deep_paths.py  test_environment_aware.py  test_evaluator_extended.py  test_evaluator_validate.py  test_evolution_hooks.py  test_function_tool.py  test_function_tool_extended.py  test_graph_entity.py  test_graph_extractor.py  test_graph_store.py  test_handoff.py  test_history_trimmer_extended.py  test_hosted_tools.py  test_i18n.py  test_input_guardrail.py  test_integration.py  test_intent.py  test_lifecycle_hooks.py  test_llm_guardrail_extended.py  (+46 more)
(+906 files in other folders)
