[project]
name = "kasaya-backend"
version = "0.1.0"
description = "Kasaya Backend — FastAPI 后端服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "httpx>=0.27.0",
    "kasaya",
    "croniter>=6.2.2",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.9",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "prometheus-client>=0.20.0",
    "python-json-logger>=2.0.0",
    "python-igraph>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH",
]
ignore = [
    "E501",   # line-too-long: 格式问题
    "E402",   # module-import-not-at-top: conftest 合理延迟导入
    "B008",   # function-call-in-default-argument: FastAPI Depends() 模式
    "B017",   # assert-raises-exception: 测试代码常见模式
    "N803",   # invalid-argument-name: SAML/A2A 协议参数名
    "N806",   # non-lowercase-variable: SQLAlchemy JSON 字段
    "N815",   # mixed-case-variable: A2A 协议字段名
    "N817",   # camelcase-imported-as-acronym
]

[tool.ruff.lint.isort]
known-first-party = ["app", "kasaya"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
kasaya = { path = "../kasaya", editable = true }

[dependency-groups]
dev = [
    "types-croniter>=6.2.2.20260402",
    "types-pyyaml>=6.0.12.20250915",
]
