[project]
name = "ckyclaw-cli"
version = "0.1.0"
description = "CkyClaw CLI — 终端 Agent 交互工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "CkyClaw Team"},
]
keywords = ["agent", "cli", "llm", "chat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ckyclaw-framework>=0.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[tool.uv.sources]
ckyclaw-framework = { path = "../ckyclaw-framework", editable = true }

[project.scripts]
ckyclaw = "ckyclaw_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ckyclaw_cli"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
